<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_order"
    android:background="@color/design_default_color_background">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_recycler"
        android:name="com.cpen321.modernwaiter.ui.order.OrderFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/startBillButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/repeating_background"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".customer.ui.bill.BillFragment"
        tools:listitem="@layout/item_bill" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/green"
        android:text="@string/checkout"
        android:padding="0dp"
        android:elevation="1dp"
...
