<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_menu"
    android:background="@color/design_default_color_background">



    <Button
        android:id="@+id/viewCartButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/green"
        android:text="@string/view_cart"
        android:padding="0dp"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/viewCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/repeating_background" >

            <TextView
                android:id="@+id/specialLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Recommendation"
                android:textSize="30sp" />

            <View
                android:id="@+id/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#C5C5C5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/featureItem"
                android:backgroundTint="#E8E8E8"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/topCardView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:elevation="0dp"
                        app:cardElevation="0dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@id/feature_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/feature_name"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:id="@+id/feature_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@tools:sample/backgrounds/scenic" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/feature_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="Spicy Ahi Roll"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/menuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Menu"
                android:textSize="30sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler"
                android:name="com.cpen321.modernwaiter.ui.menu.MenuItemFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="LinearLayoutManager"
                android:isScrollContainer="false"
                app:layout_constraintBottom_toTopOf="@+id/viewCartButton"
                tools:context=".customer.ui.menu.MenuFragment"
                tools:listitem="@layout/item_menu" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
